# shadertui

./: .ticket  CLAUDE.md  Cargo.toml  PRD.md  README.md
docs/: PRD.md
docs/tickets/: 004_improve_error_handling.md  005_add_aidev_annotations.md  006_refactor_module_structure.md
docs/tickets/backlog/: 001-module-structure-improvements-2025-07-20.md  006-refactor-window-renderer-extract-utilities-2025-08-02.md
docs/tickets/dev/: 005-implement-shader-shell-architecture-2025-08-02.md
docs/tickets/done/: 002-update-readme-phases-9-10-2025-07-26.md  003-fix-y-axis-inconsistency-terminal-window-2025-07-26.md  004-color-space-mismatch-between-renderers-2025-08-02.md  005-implement-shader-shell-architecture-2025-08-02.md
shaders/: advanced_utils.wgsl  broken.wgsl  example.wgsl  math.wgsl  test_basic_import.wgsl  test_circular_a.wgsl  test_circular_b.wgsl  test_missing_import.wgsl  test_multi_import.wgsl  test_nested_import.wgsl  utils.wgsl
src/: app.rs  cli.rs  event_loop.rs  file_watcher.rs  gpu_renderer.rs  main.rs  terminal_renderer.rs  threaded_event_loop.rs  threading.rs  windowed_event_loop.rs
src/gpu/: buffer.rs  device.rs  mod.rs  pipeline.rs  uniforms.rs
src/renderers/: gpu_renderer.rs  mod.rs  terminal_renderer.rs  window_renderer.rs
src/renderers/window/: mod.rs  pipeline.rs  resources.rs  state.rs  (+1 more)
src/shaders/: default.wgsl  terminal_shell.wgsl  window_display.wgsl  window_shell.wgsl
src/terminal/: buffer.rs  mod.rs  render.rs
src/utils/: cli.rs  mod.rs  multi_file_watcher.rs  screen.rs  shader_import.rs  shader_shell.rs  validation.rs
