[package]
name = "shadertui"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.1"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
flume = "0.11.1"
naga = { version = "26.0.0", features = ["termcolor", "wgsl-in"] }
pollster = "0.4.0"
wgpu = "25.0.2"
